fix(docs): don't allow table of contents to overlay content on mobile
Resolves: #1822

--- a/docs/src/components/frame/frame.module.css
+++ b/docs/src/components/frame/frame.module.css
@@ -19,7 +19,7 @@
   @media (width >= 768px) {
     padding-left: var(--asideWidth);
   }
-  @media (width >= 1280px) {
+  @media (width >= 960px) {
     padding-right: var(--metaWidth);
   }
 
